white-space:nowrap to stop long names from reflowing when the search box is focused. Thank you @evdb

--- a/public/sass/_default.scss
+++ b/public/sass/_default.scss
@@ -179,6 +179,7 @@ header.person-header-nav{
 		font-weight: normal;
 		overflow:hidden;
 		text-overflow: ellipsis; 
+		white-space: nowrap;
 	}
 	&.focus-search .current-person{
 		width: 6em;
